# CloudRemoteDesktop

./: DevelopDoc.md  README.md  client_server.md
Doc/: tigerVNC.xmind
project/RemoteControl/: CMakeLists.txt  README.md
project/RemoteControl/CClient/: .gitignore  CControlWnd.cpp  CControlWnd.h  CImgReader.cpp  CMakeLists.txt  CMsgReader.cpp  CMsgReader.h  CMsgWriter.cpp  CMsgWriter.h  CRenderHelper.cpp  CRenderHelper.h  Command.h  RWSocket.cpp  RWSocket.h  ServerParams.h  client.pro  consts.h  mainwindow.cpp  mainwindow.h  values.cpp
project/RemoteControl/CClient/src/: .gitignore  CControlWnd.cpp  CControlWnd.h  CImgReader.cpp  CImgReader.h  CMsgReader.cpp  CMsgReader.h  CMsgWriter.cpp  CMsgWriter.h  ClientParams.h  Command.cpp  Command.h  Command2.cpp  Command2.h  RCBuffer.h  RWSocket.cpp  ServerParams.h  build.bat  mainwindow.cpp  values.h
project/RemoteControl/CServer/: CMakeLists.txt  ClientParams.cpp  Command.h  RWSocket.cpp  RWSocket.h  SControler.cpp  SControler.h  SImgWriter.cpp  SImgWriter.h  SMsgReader.cpp  SMsgReader.h  SMsgWriter.cpp  SMsgWriter.h  ServerHelper.cpp  ServerHelper.h  ServerParams.cpp  consts.h  cserver.pro  mainwindow.cpp
project/RemoteControl/CServer/src/: Command.cpp  Command.h  RWSocket.cpp  RWSocket.h  SControler.cpp  SControler.h  SImgWriter.cpp  SImgWriter.h  SMsgHandler.cpp  SMsgHandler.h  SMsgReader.cpp  SMsgReader.h  SMsgWriter.cpp  SMsgWriter.h  ServerParams.cpp  build.bat  main.cpp  mainwindow.cpp  mainwindow.h
project/RemoteControl/Client/: CControlWnd.cpp  CControlWnd.h  CMakeLists.txt  CMsgWriter.cpp  ClientParams.h  Config.h  RWSocket.cpp  ServerParams.cpp  consts.h
project/RemoteControl/Client/src/: CImgReader.cpp  CMsgReader.h  CMsgWriter.h  ClientParams.cpp  RWSocket.cpp
project/RemoteControl/Server/: CMakeLists.txt
project/RemoteControl/Server/src/: .gitignore  Common.h  SControler.h  SImgWriter.h  SMsgHandler.cpp  SMsgReader.cpp  SMsgWriter.cpp
project/RemoteControl/TestCode/: Command2.cpp  Command2.h  build.sh  testMouseMove.cpp
project/RemoteControl/app/client/: CMakeLists.txt
project/RemoteControl/app/client/src/: CBaseHelper.cpp  CBaseHelper.h  CControlWnd.cpp  CControlWnd.h  CImgReader.cpp  CImgReader.h  CKeyAssistant.cpp  CKeyAssistant.h  CKeyAssistantWin.cpp  CKeyAssistantWin.h  CKeyHook.cpp  CKeyHook.h  CKeyHookWin.cpp  CKeyHookWin.h  CLoginWnd.cpp  CLoginWnd.h  CMsgReader.cpp  CMsgReader.h  CMsgWriter.cpp  CMsgWriter.h  ClientData.cpp  ClientData.h  main.cpp  mainwindow.cpp  mainwindow.h
project/RemoteControl/app/server/: CMakeLists.txt
project/RemoteControl/app/server/src/: SControler.cpp  SControler.h  SImgWriter.cpp  SImgWriter.h  SMsgHandler.cpp  SMsgHandler.h  SMsgReader.cpp  SMsgReader.h  SMsgWriter.cpp  SMsgWriter.h  ServerHelper.h  main.cpp  mainwindow.cpp  mainwindow.h
project/RemoteControl/utils/: CMakeLists.txt
project/RemoteControl/utils/include/: ClientParams.h  Command.h  Common.h  ExportMacro.h  RCBuffer.h  RWSocket.h  ServerParams.h
project/RemoteControl/utils/src/: ClientParams.cpp  Command.cpp  Common.cpp  RCBuffer.cpp  ServerParams.cpp
